# yLab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STM32G070XX_FLASH.ld  gcc-arm-none-eabi.cmake
1-app/: CMakeLists.txt  main.c
1-app/device/: CMakeLists.txt
1-app/device/inc/: communication.h  flash.h  switch.h
1-app/device/src/: communication.c  flash.c  switch.c
1-app/led/: CMakeLists.txt
1-app/led/inc/: blink.h  switch.h
1-app/led/src/: blink.c  switch.c
1-app/task/: CMakeLists.txt
1-app/task/inc/: blink.h  serialshell.h
1-app/task/src/: blink.c  serialshell.c
2-Midware/: CMakeLists.txt
2-Midware/freeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
2-Midware/shell/: CMakeLists.txt  shell_cfg.h
2-Midware/shell/inc/: shell.h
2-Midware/shell/src/: shell.c
2-Midware/yDev/: CMakeLists.txt  yDev_config.h
2-Midware/yDev/inc/: yDev.h  yDev_25q.h  yDev_def.h  yDev_dma.h  yDev_gpio.h  yDev_usart.h
2-Midware/yDev/src/: yDev.c  yDev_25q.c  yDev_def.h  yDev_dma.c  yDev_gpio.c  yDev_usart.c
3-ySTM32F4Platform/Core/: CMakeLists.txt
3-ySTM32F4Platform/fwlib/: CMakeLists.txt
3-ySTM32F4Platform/yDrv/inc/: yDrv_basic.h  yDrv_dma.h  yDrv_gpio.h  yDrv_spi.h
3-ySTM32F4Platform/yDrv/src/: yDrv.c  yDrv_basic.c  yDrv_dma.c  yDrv_gpio.c  yDrv_spi.c
3-ySTM32F4Platform/yLib/: yLib_config.h
3-ySTM32F4Platform/yLib/inc/: yLib_heap.h  yLib_list.h  yLib_rbtree.h
3-ySTM32G0Platform/: CMakeLists.txt
3-ySTM32G0Platform/Core/: CMakeLists.txt
3-ySTM32G0Platform/fwlib/: CMakeLists.txt
3-ySTM32G0Platform/yDrv/: CMakeLists.txt
3-ySTM32G0Platform/yDrv/inc/: yDrv_basic.h  yDrv_dma.h  yDrv_gpio.h  yDrv_spi.h  yDrv_usart.h
3-ySTM32G0Platform/yDrv/src/: yDrv.c  yDrv_basic.c  yDrv_gpio.c  yDrv_spi.c  yDrv_usart.c
3-ySTM32G0Platform/yLib/: CMakeLists.txt  README.md  yLib_config.h
3-ySTM32G0Platform/yLib/inc/: yLib_def.h  yLib_fifo.h  yLib_mempool.h  yLib_ring.h
3-ySTM32G0Platform/yLib/src/: yLib_fifo.c  yLib_heap.c  yLib_list.c  yLib_mempool.c  yLib_rbtree.c  yLib_ring.c
