# ==============================================================================
# STM32G0 平台库 CMake 配置文件
# ==============================================================================
# 此文件定义了STM32G0平台相关的所有组件
# 包含CMSIS、HAL驱动和自定义驱动
# ==============================================================================

cmake_minimum_required(VERSION 3.22)

# ------------------------------------------------------------------------------
# 子目录添加
# ------------------------------------------------------------------------------

# 添加子模块驱动库
add_subdirectory(yLib)
add_subdirectory(Core)
add_subdirectory(fwlib)
add_subdirectory(yDrv)


# ------------------------------------------------------------------------------
# yPlatform目标创建
# ------------------------------------------------------------------------------
# 创建STM32驱动静态库（.o静态库）将所有.c生成一个.o
add_library(yPlatform 
    INTERFACE 
)             # 使用OBJECT库类型，提高链接效率，避免重复编译

target_link_libraries(yPlatform 
    INTERFACE 
        yDrv_Interface
        yLib_Interface
)


